--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -46,4 +46,12 @@
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
+  
+    <system.web>
+        <customErrors mode="Off"/>
+    </system.web>
+  
+   <system.web>
+        <customErrors mode="RemoteOnly" defaultRedirect="mycustompage.htm"/>
+    </system.web>
 </configuration>
