--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -48,7 +48,7 @@
   </appSettings>
   
     <system.web>
-        <customErrors mode="Off"/>
+        <customErrors mode="On"/>
     </system.web>
   
 
