--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -47,8 +47,8 @@
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
   
-    <system.web>
-        <customErrors mode="On"/>
+ <system.web>
+        <customErrors mode="RemoteOnly" defaultRedirect="default.aspx"/>
     </system.web>
   
 
