--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -47,6 +47,10 @@
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
   
+   <system.web>
+        <customErrors mode="Off"/>
+    </system.web>
+  
  <system.web>
         <customErrors mode="RemoteOnly" defaultRedirect="default.aspx"/>
     </system.web>
