--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -5,11 +5,15 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+    <connectionStrings>
+    <add name="ConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\ajord\source\repos\WebApplication1\App_Data\KFurniture.mdf;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
 
   <system.web>
     <pages theme="Normal" />
     <compilation debug="true" targetFramework="4.5.1"/>
-    <httpRuntime targetFramework="4.5.1"/>
+    
 
 
     <siteMap defaultProvider="XmlSiteMapProvider" enabled="true">
