--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -9,11 +9,13 @@
     <add name="ConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\ajord\source\repos\WebApplication1\App_Data\KFurniture.mdf;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
-
+<httpRuntime targetFramework="3.5"/>
+  
   <system.web>
     <pages theme="Normal" />
     
-
+<compilation debug="true" targetFramework="3.5"/>
+    
 
     <siteMap defaultProvider="XmlSiteMapProvider" enabled="true">
       <providers>
